# dl_personal_biography

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
src/dl_personal_biography/: core.py  prompt.py  utils.py
src/dl_personal_biography.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_222.py  work.py
tests/demo/: dongsheng.py  mark.py
tests/resource/: chat_message.csv  memory_card.csv  user_profile.csv
