[project]
name = "dl-personal-biography"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "toml==0.10.2",]

[tool.setuptools.package-data]
dl_personal_biography = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
