[project]
name = "dl-personal-biography"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "anyio>=4.10.0",
 "fastapi>=0.116.1",
 "llmada>=1.0.6",
 "pytest>=8.4.1",
 "pytest-asyncio>=1.1.0",
 "pytest-tornasync>=0.6.0.post2",
 "pyyaml>=6.0.2",
 "toml==0.10.2",
 "uvicorn>=0.35.0",
]

[tool.setuptools.package-data]
dl_personal_biography = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
